@@ -44,22 +44,6 @@
       </object>
     </child>
   </object>
-  <object class="GtkListStore" id="account_transactions_treestore">
-    <columns>
-      <!-- column-name object -->
-      <column type="PyObject"/>
-      <!-- column-name description -->
-      <column type="gchararray"/>
-      <!-- column-name amount -->
-      <column type="gfloat"/>
-      <!-- column-name category -->
-      <column type="gchararray"/>
-      <!-- column-name date -->
-      <column type="PyObject"/>
-      <!-- column-name icon -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
   <object class="GtkAction" id="add_acc_transaction">
     <property name="label" translatable="yes">_Add</property>
     <property name="short_label" translatable="yes">_Add</property>
@@ -126,98 +110,6 @@
         <signal name="activate" handler="on_remove_category" swapped="no"/>
       </object>
     </child>
-  </object>
-  <object class="GtkAdjustment" id="adjustment1">
-    <property name="upper">100</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
-  </object>
-  <object class="GtkMenu" id="asset_allocation_contextmenu">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="accel_group">accelgroup1</property>
-    <child>
-      <object class="GtkImageMenuItem" id="add_category2">
-        <property name="related_action">add_category1</property>
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkImageMenuItem" id="menuitem22">
-        <property name="related_action">remove_category</property>
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="aa_add_account_menu">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="has_tooltip">True</property>
-        <property name="tooltip_text" translatable="yes">Add account</property>
-        <property name="label" translatable="yes">Add account..</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="aa_add_positions_menu">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="has_tooltip">True</property>
-        <property name="tooltip_text" translatable="yes">Add position</property>
-        <property name="label" translatable="yes">Add position..</property>
-      </object>
-    </child>
-  </object>
-  <object class="GtkMenu" id="asset_allocation_item_contextmenu">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="accel_group">accelgroup1</property>
-    <child>
-      <object class="GtkImageMenuItem" id="menuitem24">
-        <property name="related_action">aa_remove_from_category</property>
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
-      </object>
-    </child>
-  </object>
-  <object class="GtkTreeStore" id="asset_allocation_store">
-    <columns>
-      <!-- column-name object -->
-      <column type="PyObject"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-      <!-- column-name target_percent -->
-      <column type="gfloat"/>
-      <!-- column-name target -->
-      <column type="gfloat"/>
-      <!-- column-name current_percent -->
-      <column type="gfloat"/>
-      <!-- column-name current -->
-      <column type="gfloat"/>
-      <!-- column-name delta_percent -->
-      <column type="gfloat"/>
-      <!-- column-name delta -->
-      <column type="gfloat"/>
-      <!-- column-name is_category -->
-      <column type="gboolean"/>
-    </columns>
-    <signal name="row-changed" handler="on_asset_allocation_row_changed" swapped="no"/>
-  </object>
-  <object class="GtkTreeStore" id="category_treestore">
-    <columns>
-      <!-- column-name object -->
-      <column type="PyObject"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-    </columns>
-    <signal name="row-changed" handler="on_row_changed" swapped="no"/>
   </object>
   <object class="GtkActionGroup" id="dividend_actiongroup">
     <property name="accel_group">accelgroup1</property>
@@ -431,6 +323,22 @@
         <property name="use_stock">True</property>
       </object>
     </child>
+  </object>
+  <object class="GtkListStore" id="account_transactions_treestore">
+    <columns>
+      <!-- column-name object -->
+      <column type="PyObject"/>
+      <!-- column-name description -->
+      <column type="gchararray"/>
+      <!-- column-name amount -->
+      <column type="gfloat"/>
+      <!-- column-name category -->
+      <column type="gchararray"/>
+      <!-- column-name date -->
+      <column type="PyObject"/>
+      <!-- column-name icon -->
+      <column type="gchararray"/>
+    </columns>
   </object>
   <object class="GtkBox" id="account_vbox">
     <property name="visible">True</property>
@@ -800,6 +708,91 @@
       </packing>
     </child>
   </object>
+  <object class="GtkAdjustment" id="adjustment1">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkMenu" id="asset_allocation_contextmenu">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="accel_group">accelgroup1</property>
+    <child>
+      <object class="GtkImageMenuItem" id="add_category2">
+        <property name="related_action">add_category1</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="menuitem22">
+        <property name="related_action">remove_category</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="aa_add_account_menu">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="has_tooltip">True</property>
+        <property name="tooltip_text" translatable="yes">Add account</property>
+        <property name="label" translatable="yes">Add account..</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="aa_add_positions_menu">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="has_tooltip">True</property>
+        <property name="tooltip_text" translatable="yes">Add position</property>
+        <property name="label" translatable="yes">Add position..</property>
+      </object>
+    </child>
+  </object>
+  <object class="GtkMenu" id="asset_allocation_item_contextmenu">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="accel_group">accelgroup1</property>
+    <child>
+      <object class="GtkImageMenuItem" id="menuitem24">
+        <property name="related_action">aa_remove_from_category</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+  </object>
+  <object class="GtkTreeStore" id="asset_allocation_store">
+    <columns>
+      <!-- column-name object -->
+      <column type="PyObject"/>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+      <!-- column-name target_percent -->
+      <column type="gfloat"/>
+      <!-- column-name target -->
+      <column type="gfloat"/>
+      <!-- column-name current_percent -->
+      <column type="gfloat"/>
+      <!-- column-name current -->
+      <column type="gfloat"/>
+      <!-- column-name delta_percent -->
+      <column type="gfloat"/>
+      <!-- column-name delta -->
+      <column type="gfloat"/>
+      <!-- column-name is_category -->
+      <column type="gboolean"/>
+      <!-- column-name icon -->
+      <column type="gchararray"/>
+    </columns>
+    <signal name="row-changed" handler="on_asset_allocation_row_changed" swapped="no"/>
+  </object>
   <object class="GtkScrolledWindow" id="asset_allocation_widget">
     <property name="width_request">300</property>
     <property name="height_request">300</property>
@@ -825,6 +818,12 @@
             <property name="clickable">True</property>
             <property name="sort_indicator">True</property>
             <property name="sort_column_id">1</property>
+            <child>
+              <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf5"/>
+              <attributes>
+                <attribute name="icon-name">9</attribute>
+              </attributes>
+            </child>
             <child>
               <object class="GtkCellRendererText" id="cellrenderertext45">
                 <signal name="edited" handler="on_aa_category_edited" swapped="no"/>
@@ -978,6 +977,15 @@
         <property name="use_stock">True</property>
       </object>
     </child>
+  </object>
+  <object class="GtkTreeStore" id="category_treestore">
+    <columns>
+      <!-- column-name object -->
+      <column type="PyObject"/>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+    </columns>
+    <signal name="row-changed" handler="on_row_changed" swapped="no"/>
   </object>
   <object class="GtkTreeStore" id="dividend_treestore">
     <columns>
@@ -1439,122 +1447,6 @@
       <column type="gfloat"/>
     </columns>
   </object>
-  <object class="GtkMenu" id="position_contextmenu">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="accel_group">accelgroup1</property>
-    <child>
-      <object class="GtkImageMenuItem" id="add6">
-        <property name="related_action">add_pf_position</property>
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkSeparatorMenuItem" id="menuitem17">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkImageMenuItem" id="sell1">
-        <property name="related_action">sell</property>
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkImageMenuItem" id="delete">
-        <property name="related_action">remove7</property>
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkImageMenuItem" id="menuitem19">
-        <property name="related_action">edit3</property>
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkImageMenuItem" id="menuitem20">
-        <property name="label" translatable="yes">imagemenuitem</property>
-        <property name="related_action">chart</property>
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="image">image6</property>
-        <property name="use_stock">False</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkImageMenuItem" id="menuitem21">
-        <property name="related_action">dividend</property>
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="move_menu">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="tooltip_text" translatable="yes">Move to different portfolio</property>
-        <property name="label" translatable="yes">Move</property>
-      </object>
-    </child>
-  </object>
-  <object class="GtkTreeStore" id="positions_treestore">
-    <columns>
-      <!-- column-name object -->
-      <column type="PyObject"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-      <!-- column-name start -->
-      <column type="gfloat"/>
-      <!-- column-name last -->
-      <column type="gfloat"/>
-      <!-- column-name change -->
-      <column type="gfloat"/>
-      <!-- column-name gain -->
-      <column type="gfloat"/>
-      <!-- column-name shares -->
-      <column type="gfloat"/>
-      <!-- column-name buy -->
-      <column type="gfloat"/>
-      <!-- column-name market -->
-      <column type="gfloat"/>
-      <!-- column-name days -->
-      <column type="gfloat"/>
-      <!-- column-name gain1 -->
-      <column type="gfloat"/>
-      <!-- column-name gain2 -->
-      <column type="gchararray"/>
-      <!-- column-name change1 -->
-      <column type="gfloat"/>
-      <!-- column-name type -->
-      <column type="gchararray"/>
-      <!-- column-name pf_percent -->
-      <column type="gfloat"/>
-      <!-- column-name gain_div -->
-      <column type="gfloat"/>
-      <!-- column-name gain_div_percent -->
-      <column type="gfloat"/>
-      <!-- column-name annual_return -->
-      <column type="gfloat"/>
-      <!-- column-name is_position -->
-      <column type="gboolean"/>
-    </columns>
-  </object>
   <object class="GtkNotebook" id="portfolio_notebook">
     <property name="width_request">400</property>
     <property name="height_request">200</property>
@@ -1976,6 +1868,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="model">pf_transactions_treestore</property>
+            <property name="search_column">2</property>
             <signal name="button-press-event" handler="on_pf_transactions_tree_button_press" swapped="no"/>
             <signal name="row-activated" handler="on_pf_transaction_row_activated" swapped="no"/>
             <child internal-child="selection">
@@ -2331,6 +2224,122 @@
         <property name="tab_fill">False</property>
       </packing>
     </child>
+  </object>
+  <object class="GtkMenu" id="position_contextmenu">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="accel_group">accelgroup1</property>
+    <child>
+      <object class="GtkImageMenuItem" id="add6">
+        <property name="related_action">add_pf_position</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkSeparatorMenuItem" id="menuitem17">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="sell1">
+        <property name="related_action">sell</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="delete">
+        <property name="related_action">remove7</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="menuitem19">
+        <property name="related_action">edit3</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="menuitem20">
+        <property name="label" translatable="yes">imagemenuitem</property>
+        <property name="related_action">chart</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="image">image6</property>
+        <property name="use_stock">False</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkImageMenuItem" id="menuitem21">
+        <property name="related_action">dividend</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="move_menu">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="tooltip_text" translatable="yes">Move to different portfolio</property>
+        <property name="label" translatable="yes">Move</property>
+      </object>
+    </child>
+  </object>
+  <object class="GtkTreeStore" id="positions_treestore">
+    <columns>
+      <!-- column-name object -->
+      <column type="PyObject"/>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+      <!-- column-name start -->
+      <column type="gfloat"/>
+      <!-- column-name last -->
+      <column type="gfloat"/>
+      <!-- column-name change -->
+      <column type="gfloat"/>
+      <!-- column-name gain -->
+      <column type="gfloat"/>
+      <!-- column-name shares -->
+      <column type="gfloat"/>
+      <!-- column-name buy -->
+      <column type="gfloat"/>
+      <!-- column-name market -->
+      <column type="gfloat"/>
+      <!-- column-name days -->
+      <column type="gfloat"/>
+      <!-- column-name gain1 -->
+      <column type="gfloat"/>
+      <!-- column-name gain2 -->
+      <column type="gchararray"/>
+      <!-- column-name change1 -->
+      <column type="gfloat"/>
+      <!-- column-name type -->
+      <column type="gchararray"/>
+      <!-- column-name pf_percent -->
+      <column type="gfloat"/>
+      <!-- column-name gain_div -->
+      <column type="gfloat"/>
+      <!-- column-name gain_div_percent -->
+      <column type="gfloat"/>
+      <!-- column-name annual_return -->
+      <column type="gfloat"/>
+      <!-- column-name is_position -->
+      <column type="gboolean"/>
+    </columns>
   </object>
   <object class="GtkMenu" id="sidebar_category_contextmenu">
     <property name="visible">True</property>
